WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
215491
REGRESSION (
r259184
): Typing -- then Return into an email moves the selection by two lines
https://bugs.webkit.org/show_bug.cgi?id=215491
Summary
REGRESSION (r259184): Typing -- then Return into an email moves the selection...
Wenson Hsieh
Reported
2020-08-13 21:44:08 PDT
<
rdar://problem/66938121
>
Attachments
Patch
(10.35 KB, patch)
2020-08-13 22:23 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
Fix the title
(10.37 KB, patch)
2020-08-13 22:27 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2020-08-13 22:23:06 PDT
Comment hidden (obsolete)
Created
attachment 406571
[details]
Patch
Wenson Hsieh
Comment 2
2020-08-13 22:27:06 PDT
Created
attachment 406572
[details]
Fix the title
Darin Adler
Comment 3
2020-08-14 10:33:09 PDT
Comment on
attachment 406572
[details]
Fix the title Thank you for fixing this problem I introduced.
Wenson Hsieh
Comment 4
2020-08-14 10:35:16 PDT
(In reply to Darin Adler from
comment #3
)
> Comment on
attachment 406572
[details]
> Fix the title > > Thank you for fixing this problem I introduced.
Thank you for the review! And also for fixing the broken subrange code :)
EWS
Comment 5
2020-08-14 10:38:10 PDT
Committed
r265678
: <
https://trac.webkit.org/changeset/265678
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 406572
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug